# TranscriptScribe

./: .gitignore  README.md  pyproject.toml
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  LOGGING.md  RAILWAY_DEPLOYMENT.md  README.md  auth.py  dependencies.py  deploy.sh  docker-compose.yml  env.example  logging_config.py  main.py  pyproject.toml  run_transcript_service_test.py  test_supabase_live.py
backend/adapters/clinical_trials/: __init__.py  ctg_v2_0_4.py
backend/adapters/db/: supabase.py
backend/adapters/llm/: gemini.py
backend/adapters/transcript_analyzer/: crewai.py  gemini.py
backend/core/services/: chat_service.py  clinical_trial_service.py  transcript_service.py
backend/domain/: address.py  chat_message.py  chat_session.py  clinical_trial.py  exceptions.py  parsed_transcript.py  patient.py
backend/handlers/: chat.py  clinical_trial.py  transcript.py  trial.py
backend/live_tests/: __init__.py  test_clinical_trial_service_live.py  test_ctg_api_live.py  test_gemini_transcript_analyzer_live.py  test_llm_gemini_live.py  test_supabase_live.py  test_transcript_service_live.py
backend/ports/: clinical_trials.py  db.py  llm.py  transcript_analyzer.py
backend/routes/: api_router.py
backend/schemas/: chat.py  clinical_trial.py  transcript.py
backend/tests/adapters/: __init__.py  test_llm_gemini.py
backend/tests/adapters/clinical_trials/: __init__.py  test_ctg_v2_0_4.py
backend/tests/adapters/llm/: test_llm_gemini.py
backend/tests/adapters/transcript_analyzer/: test_gemini_transcript_analyzer.py
backend/tests/core/services/: test_chat_service.py  test_clinical_trial_service.py  test_transcript_service.py
backend/tests/integration/: test_transcript_flow_integration.py
frontend/: PROXY_SETUP.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  test-proxy-real.js  test-proxy.js
(+60 files in other folders)
